# dark-mode-firefox

./: Cargo.toml  README.md
assets/: native-manifest.json
extension/: background.js  manifest.json
src/: main.rs
