[package]
name = "dark-mode"
version = "1.0.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[[bin]]
name = "dark-mode-firefox"
path = "src/main.rs"
doc = false
test = false
bench = false

[dependencies]
dirs = "1"
which = "2"

[dependencies.webextension-protocol]
git = "https://github.com/fenhl/rust-webextension-protocol"
